# MayaAutomation

./: .bazelignore  .bazelrc  .braids.json  .gitattributes  .gitignore  Gemfile  README.md  TODO.md  WORKSPACE.bazel
lib/realityforge/maya/: anaylze_rigging.py  animation.py  basic_rigger.py  button_wrapper.py  export_meshes.py  rigging_tools.py  setup.py  smart_parent_constraint.py  transfer_animation.py  util.py
